--- a/aoc2024/Cargo.toml
+++ b/aoc2024/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
 itertools = "0.13.0"
+regex = "1.11.1"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
